--- a/projectsite/templates/chart.html
+++ b/projectsite/templates/chart.html
@@ -118,6 +118,63 @@
   </div>
   {% endblock %} {% block chart %}
   <script>
+    function loadChartData() {
+  fetch("/chart/")
+    .then((response) => response.json())
+    .then((data) => {
+      var severityLevels = Object.keys(data);
+      var counts = Object.values(data);
+      var pieChart = document.getElementById("pieChart").getContext("2d");
+
+      console.log("call");
+
+      new Chart(pieChart, {
+        type: "pie",
+        data: {
+          datasets: [
+            {
+              data: counts,
+              backgroundColor: ["#1d7af3", "#f3545d", "#fdaf4b"],
+              borderWidth: 0,
+            },
+          ],
+          labels: severityLevels,
+        },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+          legend: {
+            position: "bottom",
+            labels: {
+              fontColor: "rgb(154, 154, 154)",
+              fontSize: 11,
+              usePointStyle: true,
+              padding: 20,
+            },
+          },
+          pieceLabel: {
+            render: "percentage",
+            fontColor: "white",
+            fontSize: 14,
+          },
+          tooltips: false,
+          layout: {
+            padding: {
+              left: 20,
+              right: 20,
+              top: 20,
+              bottom: 20,
+            },
+          },
+        },
+      });
+    })
+    .catch((error) => console.error("Error:", error));
+}
+
+loadChartData();
+
+
     var lineChart = document.getElementById("lineChart").getContext("2d"),
       barChart = document.getElementById("barChart").getContext("2d"),
       pieChart = document.getElementById("pieChart").getContext("2d"),
@@ -125,7 +182,7 @@
       radarChart = document.getElementById("radarChart").getContext("2d"),
       bubbleChart = document.getElementById("bubbleChart").getContext("2d"),
       multipleLineChart = document.getElementById("multipleLineChart").getContext("2d"),
-      multipleLineChart = document.getElementById("multipleLineChart").getContext("2d"),
+      multipleLineChart = document.getElementById("multipleLineChart").getContext("2d")
       
 var myLineChart = new Chart(lineChart, {
   type: "line",
@@ -201,7 +258,7 @@ var myBarChart = new Chart(barChart, {
     },
   });
 
-  var myPieChart = new Chart(pieChart, {
+  /* var myPieChart = new Chart(pieChart, {
     type: "pie",
     data: {
       datasets: [
@@ -240,7 +297,7 @@ var myBarChart = new Chart(barChart, {
         },
       },
     },
-  });
+  }); */
 
   var myDoughnutChart = new Chart(doughnutChart, {
     type: "doughnut",
